# sqlfmt-web

./: .pre-commit-config.yaml  Makefile  Procfile  README.md  app.json  index.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
src/sqlfmt_web/: __main__.py  example.py  greeting.py  header.py  index.py  script.py
src/sqlfmt_web/assets/: __init__.py  details_template.html  docusaurus.css  example.sql  footer.html  greeting.md  index.css  nav.html  script.js
tests/: test_index.py
